--- a/index.html
+++ b/index.html
@@ -68,5 +68,205 @@
             </div>
         </div>
     </section>
+
+    <section class="three">
+        <div class="container-section">
+            <div class="features align-items-center">
+                <p class="txt-description-section-one text-align-center">With the new AirPlay 2, you can control your home audio system 
+                    <br>and the speakers throughout your house.4 You can play a song in 
+                    <br>the living room and your kitchen at the same time. Adjust the 
+                    <br>volume in any room.</p>
+                    <p class="text-align-center"><a href="#" class="link-more text-align-center arrow" target="_black">Link</a></p>
+            </div>
+            <div class="ratio ratio-16x9">
+                <a href="#"><img src="./img/img/video.jpg" alt="play"></a>
+            </div>
+            <p class="txt-description-section-two txt-opacity text-align-center">All base UI elements are made using Nested Symbols and shared styles that are 
+                <br>logically connected with one another.</p>
+        </div>
+    </section>
+
+    <section class="four">
+        <div class="container-section">
+            <div class="features d-flex justify-space-btw align-items-center">
+                <div class="image">
+                    <img src="./img/graph.png" alt="" class="section-image">
+                </div>
+                <div class="features-txt wrap d-flex justify-space-btw">
+                    <div class="title-txt">
+                        <h4 class="section-title-section-inner similar-title-txt">Long headline to turn your visitors into users</h4>
+                        <p class="txt-description-section-inner similar-normal-txt">Separated they live in Bookmarks right at the coast of the famous Semantics, large language ocean Separated they live in Bookmarks right at the coast.</p>
+                    </div>
+                        <div class="feature-one">
+                            <h4 class="features-column">Feature one</h4>
+                            <p class="features-descriptions">Gorgeous, high-quality video sharing on desktop, mobile, tablet</p>
+                        </div>
+                        <div class="feature-two">
+                            <h4 class="features-column">Feature two</h4>
+                            <p class="features-descriptions">Gorgeous, high-quality video sharing on desktop, mobile, tablet</p>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="five">
+        <div class="container-section">
+            <div class="features row-reverse d-flex justify-space-btw align-items-center">
+                <div class="image">
+                    <img src="./img/graph.png" alt="" class="section-image">
+                </div>
+                <div class="features-txt wrap d-flex justify-space-btw">
+                    <div class="title-txt">
+                        <h4 class="section-title-section-inner similar-title-txt">Long headline to turn your visitors into users</h4>
+                        <p class="txt-description-section-inner similar-normal-txt">Separated they live in Bookmarks right at the coast of the famous Semantics, large language ocean Separated they live in Bookmarks right at the coast.</p>
+                    </div>
+                        <div class="feature-one">
+                            <h4 class="features-column">Feature one</h4>
+                            <p class="features-descriptions">Gorgeous, high-quality video sharing on desktop, mobile, tablet</p>
+                        </div>
+                        <div class="feature-two">
+                            <h4 class="features-column">Feature two</h4>
+                            <p class="features-descriptions">Gorgeous, high-quality video sharing on desktop, mobile, tablet</p>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="six">
+        <div class="container-section">
+            <div class="section-sever-title">
+                <h6 class="tagline-txt-section-two text-align-center">Tagline</h6>
+                <h3 class="section-title-section-two text-align-center">Long headline to turn your 
+                    <br>visitors into users</h3>
+            </div>
+            <div class="subscribe-longest d-flex justify-center align-items-center text-align-center">
+                <a href="#" class="duration-link"><p class="duration active-duration">Monthly</p></a>
+                <a href="#" class="duration-link duration-spacing-right"><p class="duration">Yearly</p></a>
+            </div>
+            <div class="section-card d-flex justify-space-btw">
+                <div class="card-subscribe">
+                    <div class="card-subscribe-body">
+                        <h5 class="card-subscribe-type text-align-end">Beginner</h5>
+                        <p class="card-text-amount"><span class="subscribe-amount">$20</span> / Month</p>
+                        <p class="card-text-info">By creating an Account on our service, 
+                            <br>you agree to subscribe</p>
+                        <ul class="card-privilege-list">
+                            <li class="privilege-list-item">Showcase and embed your work</li>
+                            <li class="privilege-list-item">Publish across social channels</li>
+                            <li class="privilege-list-item">Sell your videos worldwide</li>
+                        </ul>
+                        <div class="btn btn-left d-flex align-items-center justify-center">
+                            <a href="#" class="btn-subscribe">Action</a>
+                        </div>
+                    </div>
+                  </div>
+                  
+                  <div class="card-subscribe">
+                    <div class="card-subscribe-body">
+                        <h5 class="card-subscribe-type text-align-end">Personal</h5>
+                        <p class="card-text-amount"><span class="subscribe-amount">$29</span> / Month</p>
+                        <p class="card-text-info">By creating an Account on our service, 
+                            <br>you agree to subscribe</p>
+                        <ul class="card-privilege-list">
+                            <li class="privilege-list-item">Showcase and embed your work</li>
+                            <li class="privilege-list-item">Publish across social channels</li>
+                            <li class="privilege-list-item">Sell your videos worldwide</li>
+                            <li class="privilege-list-item">Premium support</li>
+                            <li class="privilege-list-item">Subscription </li>
+                        </ul>
+                        <div class="btn btn-center d-flex align-items-center justify-center">
+                            <a href="#" class="btn-subscribe">Action</a>
+                        </div>
+                    </div>
+                  </div>
+                  
+                  <div class="card-subscribe">
+                    <div class="card-subscribe-body">
+                        <h5 class="card-subscribe-type text-align-end">Unlimited</h5>
+                        <p class="card-text-amount"><span class="subscribe-amount">$79</span> / Month</p>
+                        <p class="card-text-info">By creating an Account on our service, 
+                            <br>you agree to subscribe</p>
+                        <ul class="card-privilege-list">
+                            <li class="privilege-list-item">Showcase and embed your work</li>
+                            <li class="privilege-list-item">Publish across social channels</li>
+                            <li class="privilege-list-item">Sell your videos worldwide</li>
+                            <li class="privilege-list-item">Premium support</li>
+                            <li class="privilege-list-item">Custom domains</li>
+                            <li class="privilege-list-item">Analytics</li>
+                        </ul>  
+                        <div class="btn btn-right d-flex align-items-center justify-center">
+                            <a href="#" class="btn-subscribe">Action</a>
+                        </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="seven">
+        <div class="container-section">
+            <div class="section-txt text-align-center">
+                <h5 class="section-seven-title-txt">Long headline on two lines to turn your visitors 
+                    <br>into users and achieve more</h5>
+                <p class="text-align-center"><a href="#" class="link-more text-align-center arrow" target="_black">Action link</a></p>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer-section">
+        <div class="container-section">
+            <div class="company">
+                <div class="company-content d-flex align-items-center justify-space-btw">
+                    <div class="footer-box-logo-sub">
+                        <a href="#"><img src="./img/footer-logo.svg" alt="" class="company-logo-footer"></a>
+                    </div>
+                        <div class="footer-menu-bar">
+                            <ul class="footer-menu d-flex">
+                                <li class="footer-item">
+                                    <a href="#" class="footer-link">First page</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a href="#" class="footer-link">Second page</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a href="#" class="footer-link">Third page</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a href="#" class="footer-link">Fourth page</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a href="#" class="footer-link">Fifth page</a>
+                                </li>
+                            </ul>
+                        </div>
+                    <div class="footer-box-social-media">
+                        <div class="social-media">
+                            <ul class="s-m-menu d-flex">
+                                <li class="s-m-item">
+                                    <a href="#" class="s-m-link insta-icon" target="_blanck"><img src="./img/instagram-icon.svg" alt=""></a>
+                                </li>
+                                <li class="s-m-item">
+                                    <a href="#" class="s-m-link fb-icon" target="_blanck"><img src="./img/facebook-icon.svg" alt=""></a>
+                                </li>
+                                <li class="s-m-item">
+                                    <a href="#" class="s-m-link twtr-icon" target="_blanck"><img src="./img/twitter-icon.svg" alt=""></a>
+                                </li>
+                                <li class="s-m-item">
+                                    <a href="#" class="s-m-link pntrt-icon" target="_blanck"><img src="./img/pinterest.svg" alt=""></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="paragraph-footer d-flex justify-center">
+                <p class="rights-txt">© 2018 Acme. All right reserved.</p>
+                <a href="#" class="terms-txt" target="_blanck">Privacy Policy</a>
+                <a href="#" class="terms-txt" target="_blanck">Terms of Service</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
